fix: use em dash because @umbrellarocket is annoying

--- a/src/components/global/svelte-workshops-cta.njk
+++ b/src/components/global/svelte-workshops-cta.njk
@@ -4,7 +4,7 @@ A call-to-action meant to be displayed at the beginning of a blog post.
 {% from "cta-banner.njk" import ctaBanner %}
 {%
   set 'content' = {
-  "title": "We are hosting Svelte Week on July 21-24...four days of full-day Svelte workshops!",
+  "title": "We are hosting Svelte Week on July 21–24...four days of full-day Svelte workshops!",
   "text": "Learn how to build fullstack apps with Svelte: auth, testing, migrating to runes and how to introduce Svelte in your non Svelte project.",
   "linkUrl": "/events/",
   "linkText": "Get your ticket now!",
