update name of new workshop

--- a/src/services/workshops.njk
+++ b/src/services/workshops.njk
@@ -25,7 +25,7 @@ og:
   collections.workshops | findByCollectionSlug("design-system-kickoff-interface-inventory"),
   collections.workshops | findByCollectionSlug("digital-product-strategy"),
   collections.workshops | findByCollectionSlug("svelte-and-sveltekit"),
-  collections.workshops | findByCollectionSlug("modern-ember-upgrade"),
+  collections.workshops | findByCollectionSlug("modernising-ember-development"),
   collections.workshops | findByCollectionSlug("learn-rust-starting-from-scratch"),
   collections.workshops | findByCollectionSlug("introduction-to-rust-for-web-developers"),
   collections.workshops | findByCollectionSlug("build-production-ready-apis-in-rust"),
