--- a/src/rust-subscription.njk
+++ b/src/rust-subscription.njk
@@ -164,7 +164,7 @@ og:
 {%
   set 'content' = {
   "title": "Sign up",
-  "text": "Sign up today for 4.000€ per month, cancel anytime.",
+  "text": "Sign up today for 2.000€ per seat per month, cancel anytime.",
   "linkUrl": "#signup-subscription",
   "linkText": "Sign up"
   }
