fix Rust subscription page

--- a/src/rust-subscription.njk
+++ b/src/rust-subscription.njk
@@ -1,7 +1,7 @@
 ---
 layout: base
 title: "Expert Rust Support for Your Team, On Demand"
-description: "Unlimited PR reviews, architecture help, and direct access to world-leading Svelte experts — for a fixed monthly price."
+description: "Unlimited PR reviews, architecture help, and direct access to world-leading Rust experts — for a fixed monthly price."
 permalink: /rust-subscription/
 og:
   image: /assets/images/rust-subscription/og-image.jpg
@@ -19,7 +19,7 @@ og:
 {%
   set 'content' = {
   "title": "Expert Rust Support for Your Team, On Demand",
-  "text": "Unlimited PR reviews, architecture help, and direct access to world-leading Svelte experts — for a fixed monthly price.",
+  "text": "Unlimited PR reviews, architecture help, and direct access to world-leading Rust experts — for a fixed monthly price.",
   "image": "/assets/images/hero/rust-subscribe.jpg",
   "alt": "Crabs arranged in a pattern",
   "loading": "eager"
@@ -34,11 +34,11 @@ og:
         <h5>Build on Rust with Confidence</h5>
         <h3 class="split-content__subheading h2">Rust Expertise on a Monthly Subscription</h3>
         <p>
-          Our Rust experts, led by Svelte maintainer
-          <a href="https://github.com/LukeMathWalker">Luca Palmieri</a>, review all of your Svelte
-          PRs and are only a Slack message away to answer any question your team runs into. We
-          enable teams to ship faster, with higher quality, resolve blockers, level up juniors, and
-          avoid dead-ends.
+          Our Rust experts, led by
+          <a href="https://github.com/LukeMathWalker">Luca Palmieri</a>, review all of your Rust PRs
+          and are only a Slack message away to answer any question your team runs into. We enable
+          teams to ship faster, with higher quality, resolve blockers, level up juniors, and avoid
+          dead-ends.
         </p>
         {%
           set link = {
@@ -66,7 +66,7 @@ og:
   "text": "Ensure code quality, avoid pitfalls, and level up"
   },{
   "heading": "Private Slack Access",
-  "text": "A direct line to Svelte experts, 24h response time"
+  "text": "A direct line to Rust experts, 24h response time"
   },{
   "heading": "Weekly Dedicated Time",
   "text": "1h per week for pairing, whiteboard sessions or hiring support"
