Apply suggestions from code review
Co-authored-by: Bartlomiej Dudzik <bartholomew.dudzik@gmail.com>

--- a/src/rust-subscription.njk
+++ b/src/rust-subscription.njk
@@ -79,7 +79,7 @@ og:
 {%
   set 'content' = {
   "title": "Signup for Rust Expert Support",
-  "text": "Sing up today for <strong class=\"strong\">2.000€ per seat per month*</strong>, with no long-term commitment—<strong class=\"strong\">cancel anytime.</strong><br><small class=\"small\">*20% discount for 10+ seats</small>",
+  "text": "Sign up today for <strong class=\"strong\">2.000€ per seat per month*</strong>, with no long-term commitment—<strong class=\"strong\">cancel anytime.</strong><br><small class=\"small\">*20% discount for 10+ seats</small>",
   "kind": "rust"
   }
 %}
