--- a/src/svelte-subscription.njk
+++ b/src/svelte-subscription.njk
@@ -78,7 +78,7 @@ og:
 {%
   set 'content' = {
   "title": "Signup for Svelte Expert Support",
-  "text": "Sing up today for <strong class=\"strong\">1.500€ per seat per month*</strong>, with no long-term commitment—<strong class=\"strong\">cancel anytime.</strong><br><small class=\"small\">*20% discount for 10+ seats</small>",
+  "text": "Sign up today for <strong class=\"strong\">1.500€ per seat per month*</strong>, with no long-term commitment—<strong class=\"strong\">cancel anytime.</strong><br><small class=\"small\">*20% discount for 10+ seats</small>",
   "kind": "svelte"
   }
 %}
