Apply suggestions from code review
Co-authored-by: umbrellarocket <80921428+umbrellarocket@users.noreply.github.com>

--- a/src/ember-subscription.njk
+++ b/src/ember-subscription.njk
@@ -20,7 +20,7 @@ og:
 {%
   set 'content' = {
   "title": "Expert Ember Support for Your Team, On Demand",
-  "text": "Unlimited PR reviews, architecture help, and direct access to world-leading Ember experts — for a fixed monthly price.",
+  "text": "Unlimited PR reviews, architecture help, and direct access to world-leading Ember experts—for a fixed monthly price.",
   "image": "/assets/images/ember/ember-consulting.jpeg",
   "alt": "A group of hamsters",
   "loading": "eager"
@@ -42,7 +42,7 @@ og:
         </p>
         {%
           set link = {
-          "label": 'Sign up today for 1.500€ per month, cancel anytime',
+          "label": 'Sign up today for 1.500€ per seat/month, cancel anytime',
           "url": '#signup-subscription'
           }
         %}
@@ -78,8 +78,8 @@ og:
 {{ featuredServices(features, content) }}
 {%
   set 'content' = {
-  "title": "Signup for Ember Expert Support",
-  "text": "Sing up today for <strong class=\"strong\">1.500€ per seat per month*</strong>, with no long-term commitment—<strong class=\"strong\">cancel anytime.</strong><br><small class=\"small\">*20% discount for 10+ seats</small>",
+  "title": "Sign up for Ember Expert Support",
+  "text": "Sing up today for <strong class=\"strong\">1.500€ per seat per month<sup>*</sup></strong>, with no long-term commitment—<strong class=\"strong\">cancel anytime.</strong><br><small class=\"small\"><sup>*</sup>20% discount for 10+ seats</small>",
   "kind": "ember"
   }
 %}
@@ -149,7 +149,7 @@ og:
 {%
   set 'content' = {
   "title": "Sign up",
-  "text": "Sign up today for 1.500€ per month, cancel anytime.",
+  "text": "Sign up today for 1.500€ per seat per month, cancel anytime.",
   "linkUrl": "#signup-subscription",
   "linkText": "Sign up"
   }
