--- a/src/svelte-subscription.njk
+++ b/src/svelte-subscription.njk
@@ -19,7 +19,7 @@ og:
 {%
   set 'content' = {
   "title": "Expert Svelte Support for Your Team, On Demand",
-  "text": "Unlimited PR reviews, architecture help, and direct access to world-leading Svelte experts — for a fixed monthly price.",
+  "text": "Unlimited PR reviews, architecture help, and direct access to world-leading Svelte experts—for a fixed monthly price.",
   "image": "/assets/images/hero/svelte-subscribe.jpg",
   "alt": "Lifebuoys in a pool",
   "loading": "eager"
@@ -77,8 +77,8 @@ og:
 {{ featuredServices(features, content) }}
 {%
   set 'content' = {
-  "title": "Signup for Svelte Expert Support",
-  "text": "Sign up today for <strong class=\"strong\">1.500€ per seat per month*</strong>, with no long-term commitment—<strong class=\"strong\">cancel anytime.</strong><br><small class=\"small\">*20% discount for 10+ seats</small>",
+  "title": "Sign up for Svelte Expert Support",
+  "text": "Sign up today for <strong class=\"strong\">1.500€ per seat per month<sup>*</sup></strong>, with no long-term commitment—<strong class=\"strong\">cancel anytime.</strong><br><small class=\"small\"><sup>*</sup>20% discount for 10+ seats</small>",
   "kind": "svelte"
   }
 %}
