--- a/src/rust-subscription.njk
+++ b/src/rust-subscription.njk
@@ -19,7 +19,7 @@ og:
 {%
   set 'content' = {
   "title": "Expert Rust Support for Your Team, On Demand",
-  "text": "Unlimited PR reviews, architecture help, and direct access to world-leading Rust experts — for a fixed monthly price.",
+  "text": "Unlimited PR reviews, architecture help, and direct access to world-leading Rust experts—for a fixed monthly price.",
   "image": "/assets/images/hero/rust-subscribe.jpg",
   "alt": "Crabs arranged in a pattern",
   "loading": "eager"
@@ -78,8 +78,8 @@ og:
 {{ featuredServices(features, content) }}
 {%
   set 'content' = {
-  "title": "Signup for Rust Expert Support",
-  "text": "Sign up today for <strong class=\"strong\">2.000€ per seat per month*</strong>, with no long-term commitment—<strong class=\"strong\">cancel anytime.</strong><br><small class=\"small\">*20% discount for 10+ seats</small>",
+  "title": "Sign up for Rust Expert Support",
+  "text": "Sign up today for <strong class=\"strong\">2.000€ per seat per month<sup>*</sup></strong>, with no long-term commitment—<strong class=\"strong\">cancel anytime.</strong><br><small class=\"small\"><sup>*</sup>20% discount for 10+ seats</small>",
   "kind": "rust"
   }
 %}
