update hero image to purple for ember workshops

--- a/src/services/workshops/ember.njk
+++ b/src/services/workshops/ember.njk
@@ -25,7 +25,7 @@ eleventyImport:
   "loading": "eager"
   }
 %}
-{{ colorHero('red', content) }}
+{{ colorHero('purple', content) }}
 {% set workshops = collections.workshops | filterByCollectionTag("ember") %}
 {{
   workshopsList('Our training offering', "We are long-time Ember experts and are best placed to train your team, no matter what level they are at.
