--- a/src/services/workshops/ember.njk
+++ b/src/services/workshops/ember.njk
@@ -21,7 +21,7 @@ eleventyImport:
   set 'content' = {
   "title": "We teach teams like yours how to succeed with Ember.js",
   "image": "/assets/images/hero/curious-hamster.jpg",
-  "alt": "A close-up photo of the figures on a table soccer table",
+  "alt": "A close-up photo of a hamster",
   "loading": "eager"
   }
 %}
