add typescript workshop to Svelte page

--- a/src/services/workshops/svelte.njk
+++ b/src/services/workshops/svelte.njk
@@ -31,7 +31,8 @@ og:
   collections.workshops | findByCollectionSlug("testing-svelte-sveltekit-applications"),
   collections.workshops | findByCollectionSlug("svelte-5-runes"),
   collections.workshops | findByCollectionSlug("authentication-for-svelte-sveltekit"),
-  collections.workshops | findByCollectionSlug("svelte-without-svelte")
+  collections.workshops | findByCollectionSlug("svelte-without-svelte"),
+  collections.workshops | findByCollectionSlug("practical-typescript")
   ]
 %}
 {{
