fix lint errors

--- a/src/ember-initiative.njk
+++ b/src/ember-initiative.njk
@@ -59,7 +59,11 @@ og:
   <div class="container container--lg">
     <h2 class="h2">Why Invest?</h2>
     <p class="text-section__text">
-      Companies that rely on Ember need the framework to stay healthy and future-proof. Letting Ember slip into legacy status would risk costly rewrites. By joining the Ember Initiative, you protect the larger investments you’ve already made and gain our team’s support to modernize your apps and overcome blockers. <a href="/contact/?service=ember+initiative">Get in touch</a> to join!
+      Companies that rely on Ember need the framework to stay healthy and future-proof. Letting
+      Ember slip into legacy status would risk costly rewrites. By joining the Ember Initiative, you
+      protect the larger investments you’ve already made and gain our team’s support to modernize
+      your apps and overcome blockers.
+      <a href="/contact/?service=ember+initiative">Get in touch</a> to join!
     </p>
   </div>
 </section>
