better CTA color

--- a/src/ember-initiative.njk
+++ b/src/ember-initiative.njk
@@ -40,7 +40,7 @@ og:
   "linkText": "Get in touch"
   }
 %}
-{{ ctaBanner('purple', 'default', content) }}
+{{ ctaBanner('aqua', 'default', content) }}
 
 <section class="mt-5">
   {%
@@ -79,4 +79,4 @@ og:
   "linkText": "Get in touch"
   }
 %}
-{{ ctaBanner('purple', 'full', content) }}
+{{ ctaBanner('aqua', 'full', content) }}
