--- a/src/components/cta-banner.njk
+++ b/src/components/cta-banner.njk
@@ -59,6 +59,15 @@
           %}
           {{ btnPrimary( link, 'white', 'mt-2' ) }}
         {% endif %}
+        {% if content.linkUrl2 %}
+          {%
+            set link = {
+            "label": content.linkText2,
+            "url": content.linkUrl2
+            }
+          %}
+          {{ btnPrimary( link, 'white', 'mt-2' ) }}
+        {% endif %}
       </div>
     </div>
   </section>
