update(svelte cta)

--- a/src/components/global/svelte-workshops-cta.njk
+++ b/src/components/global/svelte-workshops-cta.njk
@@ -4,10 +4,12 @@ A call-to-action meant to be displayed at the beginning of a blog post.
 {% from "cta-banner.njk" import ctaBanner %}
 {%
   set 'content' = {
-  "title": "We are hosting Svelte Week on July 21–24...four days of full-day Svelte workshops!",
-  "text": "Learn how to build fullstack apps with Svelte: auth, testing, migrating to runes and how to introduce Svelte in your non Svelte project.",
-  "linkUrl": "/events/?utm_source=blog&utm_medium=social&utm_campaign=25-06-25-how-to-build-web-components-with-svelte#svelte-5-and-runes",
-  "linkText": "Get your ticket now!",
+  "title": "We are hosting Svelte Week on September 1–4...four days of full-day Svelte workshops!",
+  "text": "Learn about new concepts introduced in Svelte 5 during our first workshop. Our second workshop will teach you what to test and how to write fast, stable, and maintainable tests."
+  "linkUrl": "https://ti.to/mainmatter/svelte-5-runes-sept-2025",
+  "linkText": "Svelte 5 & Runes",
+  "linkUrl2": https://ti.to/mainmatter/testing-svelte-sept-2025",
+  "linkText2": "Testing Svelte & SvelteKit applications",
   "class": "cta-banner__svelteWorkshops"
   }
 %}
