--- a/src/components/global/svelte-workshops-cta.njk
+++ b/src/components/global/svelte-workshops-cta.njk
@@ -5,7 +5,7 @@ A call-to-action meant to be displayed at the beginning of a blog post.
 {%
   set 'content' = {
   "title": "We are hosting Svelte Week on September 1–4...four days of full-day Svelte workshops!",
-  "text": "Learn about new concepts introduced in Svelte 5 during our first workshop. Our second workshop will teach you what to test and how to write fast, stable, and maintainable tests."
+  "text": "Learn about new concepts introduced in Svelte 5 during our first workshop. Our second workshop will teach you what to test and how to write fast, stable, and maintainable tests.",
   "linkUrl": "https://ti.to/mainmatter/svelte-5-runes-sept-2025",
   "linkText": "Svelte 5 & Runes",
   "linkUrl2": https://ti.to/mainmatter/testing-svelte-sept-2025",
