--- a/src/components/global/svelte-workshops-cta.njk
+++ b/src/components/global/svelte-workshops-cta.njk
@@ -1,16 +1,53 @@
-{#
-A call-to-action meant to be displayed at the beginning of a blog post.
-#}
-{% from "cta-banner.njk" import ctaBanner %}
-{%
-  set 'content' = {
-  "title": "We are hosting Svelte Week on Septermber 1–4...four days of full-day Svelte workshops!",
-  "text": "Learn about new concepts introduced in Svelte 5 during our first workshop. Our second workshop will teach you what to test and how to write fast, stable, and maintainable tests.",
-  "linkUrl": "https://ti.to/mainmatter/svelte-5-runes-sept-2025",
-  "linkText": "Svelte 5 & Runes",
-  "linkUrl2": "https://ti.to/mainmatter/testing-svelte-sept-2025",
-  "linkText2": "Testing Svelte and SvelteKit Applications",
-  "class": "cta-banner__svelteWorkshops"
-  }
-%}
-{{ ctaBanner('purple', 'default', content) }}
+{% from "btn-primary.njk" import btnPrimary %}
+{% from "cta-link.njk" import ctaLink %}
+
+<section
+  class="cta-banner cta-banner--purple cta-banner__svelteWorkshops container container--xl my-10"
+  data-background-color="purple"
+>
+  <div class="cta-banner__wrapper">
+    <div class="cta-banner__main">
+      <h2 class="cta-banner__title">Join Our Workshops in September!</h2>
+      <div class="cta-banner__text">
+        We are running a series of workshops on Svelte and TypeScript in September, all taught by
+        Svelte Maintainer Paolo Ricciuti fully remote over multiple afternoons.
+      </div>
+      <h3 class="cta-banner__subheading">Svelte 5 & Runes</h3>
+      <p class="small">September 1st & 2nd 2025, 14:00-18:00 CEST</p>
+      <p>
+        Learn all about Svelte 5’s new runes and snippets as well as how to migrate from older
+        patterns.
+      </p>
+      {%
+        set link = {
+        "label": "Sign up",
+        "url": "https://ti.to/mainmatter/svelte-5-runes-sept-2025"
+        }
+      %}
+      {{ btnPrimary( link, 'white', 'mt-2' ) }}
+      <h3 class="cta-banner__subheading">Testing Svelte and SvelteKit Applications</h3>
+      <p class="small">September 3rd & 4th 2025, 14:00-18:00 CEST</p>
+      <p>
+        Learn how to write tests for Svlete and SvelteKit apps that are fast, stable, and easy to
+        maintain.
+      </p>
+      {%
+        set link = {
+        "label": "Sign up",
+        "url": "https://ti.to/mainmatter/testing-svelte-sept-2025"
+        }
+      %}
+      {{ btnPrimary( link, 'white', 'mt-2' ) }}
+      <h3 class="cta-banner__subheading">Practical TypeScript</h3>
+      <p class="small">September 15th-18th 2025, 14:00-18:00 CEST</p>
+      <p>Master TypeScript and turn it from a pain into a powerful ally.</p>
+      {%
+        set link = {
+        "label": "Sign up",
+        "url": "https://ti.to/mainmatter/typescript-sept-2025"
+        }
+      %}
+      {{ btnPrimary( link, 'white', 'mt-2' ) }}
+    </div>
+  </div>
+</section>
