fix: shrink too big images and skip autoOg in serve/watch mode

--- a/src/components/global/meta.njk
+++ b/src/components/global/meta.njk
@@ -37,7 +37,7 @@
 
 <meta name="fediverse:creator" content="@mainmatter@fosstodon.org" />
 
-{%- if autoOg -%}
+{%- if autoOg and eleventy.env.runMode === "build" -%}
   {% set author = authorHandle | findBySlug %}
   {% setAsync "ogImageUrl" -%}
     {% ogImage "./og-image.og.njk", { title: title, author: author.data, authorHandle: authorHandle } %}
