--- a/src/components/global/svelte-workshops-cta.njk
+++ b/src/components/global/svelte-workshops-cta.njk
@@ -40,7 +40,9 @@
       {{ btnPrimary( link, 'white', 'mt-2' ) }}
       <h4 class="cta-banner__subheading mt-3">Practical TypeScript</h4>
       <p class="small">September 15th-18th 2025, 14:00-18:00 CEST</p>
-      <p class="mt-0 cta-banner__text">Master TypeScript and turn it from a pain into a powerful ally.</p>
+      <p class="mt-0 cta-banner__text">
+        Master TypeScript and turn it from a pain into a powerful ally.
+      </p>
       {%
         set link = {
         "label": "Sign up",
