add to workshops page

--- a/src/services/workshops.njk
+++ b/src/services/workshops.njk
@@ -42,7 +42,8 @@ og:
   collections.workshops | findByCollectionSlug("rust-python-interoperability"),
   collections.workshops | findByCollectionSlug("foundations-of-embedded-rust"),
   collections.workshops | findByCollectionSlug("svelte-without-svelte"),
-  collections.workshops | findByCollectionSlug("effective-git")
+  collections.workshops | findByCollectionSlug("effective-git"),
+  collections.workshops | findByCollectionSlug("building-mcp-servers")
   ]
 %}
 {{
