Change(button copy)

--- a/src/components/global/svelte-workshops-cta.njk
+++ b/src/components/global/svelte-workshops-cta.njk
@@ -19,7 +19,7 @@
       </p>
       {%
         set link = {
-        "label": "Sign up",
+        "label": "Register now",
         "url": "https://ti.to/mainmatter/svelte-5-runes-sept-2025"
         }
       %}
@@ -32,7 +32,7 @@
       </p>
       {%
         set link = {
-        "label": "Sign up",
+        "label": "Register now",
         "url": "https://ti.to/mainmatter/testing-svelte-sept-2025"
         }
       %}
@@ -44,7 +44,7 @@
       </p>
       {%
         set link = {
-        "label": "Sign up",
+        "label": "Register now",
         "url": "https://ti.to/mainmatter/typescript-sept-2025"
         }
       %}
