--- a/src/components/global/svelte-workshops-cta.njk
+++ b/src/components/global/svelte-workshops-cta.njk
@@ -7,8 +7,9 @@
 >
   <div class="cta-banner__wrapper">
     <div class="cta-banner__main">
-      <div class="cta-banner__text mt-0">We are running a workshop on Svelte and TypeScript in September, taught by
-        Svelte Maintainer Paolo Ricciuti fully remote over multiple afternoons.
+      <div class="cta-banner__text mt-0">
+        We are running a workshop on Svelte and TypeScript in September, taught by Svelte Maintainer
+        Paolo Ricciuti fully remote over multiple afternoons.
       </div>
       <h4 class="cta-banner__subheading mt-2">Practical TypeScript</h4>
       <p class="small">September 15th-18th 2025, 14:00-18:00 CEST</p>
