feat: blog post "Model Context Protocol: the start of something new"

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -21,6 +21,7 @@
 @use "components/client-card";
 @use "components/contact-form";
 @use "components/rte";
+@use "components/note";
 @use "components/author";
 @use "components/author-header";
 @use "components/post";
