update website for ER '26

--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -72,10 +72,10 @@ og:
       <h5 class="mb-015">EuroRust</h5>
       <h3 class="mb-2">We run EuroRust</h3>
       <p>
-        In 2025, EuroRust comes to Paris on October 9th and 10th. We’ll have two days of talks with
-        a main track and a side track as well as impl rooms. Plus, there will be workshops on the
-        day before the main conference, several side activities around the event, as well as our
-        hallmark after party on Friday night.
+        In 2026, EuroRust comes to Barcelona from October 14th to 17th. We’ll have two days of talks
+        with a main track and a side track as well as an impl room. Plus, there will be workshops on
+        the day before the main conference, an impl day on the day after, several side activities
+        around the event, as well as our hallmark after party on Friday night.
       </p>
     </div>
   </div>
@@ -83,7 +83,7 @@ og:
     <a href="https://eurorust.eu" class="split-content__link"></a>
     <div class="split-content__wrapper">
       <div class="split-content__content">
-        <h4>Join us in Paris in 2025 for 2 days of celebrating the European Rust community</h4>
+        <h4>Join us in Barcelona in 2026 for 4 days of celebrating the European Rust community</h4>
         {%
           set link = {
           "label": 'Stay up to date!',
