use upper-case request methods

--- a/src/components/contact-form.njk
+++ b/src/components/contact-form.njk
@@ -15,7 +15,7 @@
         data-contact-form
         data-status="initial"
         data-action="https://contact.mainmatter.dev/send"
-        data-method="post"
+        data-method="POST"
         data-goal="Contact"
       >
         <fieldset data-form-content tabindex="-1" disabled>
