--- a/src/components/layouts/workshop.njk
+++ b/src/components/layouts/workshop.njk
@@ -121,7 +121,7 @@ layout: "base"
           class="contact-form__form"
           data-status="initial"
           data-action="https://hooks.zapier.com/hooks/catch/4837956/29yixsv/"
-          data-method="get"
+          data-method="GET"
           data-goal="Workshop+Contact"
         >
           <fieldset data-form-content tabindex="-1" disabled>
