--- a/src/travel.njk
+++ b/src/travel.njk
@@ -70,7 +70,7 @@ og:
           class="contact-form__form form-with-image__form"
           data-status="initial"
           data-action="https://hooks.zapier.com/hooks/catch/4837956/24hp3a0/"
-          data-method="get"
+          data-method="GET"
           data-goal="Travel+Whitepaper"
         >
           <fieldset data-form-content tabindex="-1" disabled>
@@ -255,7 +255,7 @@ og:
         class="contact-form__form"
         data-status="initial"
         data-action="https://contact.mainmatter.dev/send"
-        data-method="post"
+        data-method="POST"
         data-goal="Travel+Whitepaper"
       >
         <fieldset data-form-content tabindex="-1" disabled>
