--- a/src/components/subscription-signup-form.njk
+++ b/src/components/subscription-signup-form.njk
@@ -15,7 +15,7 @@
           class="contact-form__form"
           data-status="initial"
           data-action="https://hooks.zapier.com/hooks/catch/4837956/2e2ewf5/"
-          data-method="get"
+          data-method="GET"
           data-goal="Subscription+Contact+{{ content.kind | capitalize }}"
         >
           <fieldset data-form-content tabindex="-1" disabled>
