--- a/src/rust-adoption-handbook.njk
+++ b/src/rust-adoption-handbook.njk
@@ -75,7 +75,7 @@ og:
           class="contact-form__form form-with-image__form"
           data-status="initial"
           data-action="https://hooks.zapier.com/hooks/catch/4837956/201xuui/"
-          data-method="get"
+          data-method="GET"
           data-goal="Rust+Adoption+Handbook"
         >
           <fieldset data-form-content tabindex="-1" disabled>
