--- a/src/components/contact-form.njk
+++ b/src/components/contact-form.njk
@@ -14,8 +14,8 @@
         id="contact-form"
         data-contact-form
         data-status="initial"
-        data-action="https://contact.mainmatter.dev/send"
-        data-method="POST"
+        data-action="https://hooks.zapier.com/hooks/catch/4837956/u502nob/"
+        data-method="GET"
         data-goal="Contact"
       >
         <fieldset data-form-content tabindex="-1" disabled>
