--- a/src/travel.njk
+++ b/src/travel.njk
@@ -254,9 +254,9 @@ og:
         data-contact-form
         class="contact-form__form"
         data-status="initial"
-        data-action="https://contact.mainmatter.dev/send"
-        data-method="POST"
-        data-goal="Travel+Whitepaper"
+        data-action="https://hooks.zapier.com/hooks/catch/4837956/u502nob/"
+        data-method="GET"
+        data-goal="Travel+Contact"
       >
         <fieldset data-form-content tabindex="-1" disabled>
           <input type="hidden" name="service" id="service" value="Travel" />
