add Redis logo to landing pgae

--- a/src/index.njk
+++ b/src/index.njk
@@ -32,14 +32,15 @@ eleventyImport:
 {{ featuredServices(services['services-list'], content) }}
 {%
   set logoCompanies = [
+  'Timify',
+  'BMW Car IT',
   'Qonto',
   'Trainline',
+  'Redis',
   'Aleph Alpha',
-  'Timify',
   'Experteer',
   'Robin Hood',
-  'Rail Europe',
-  'BMW Car IT'
+  'Rail Europe'
   ]
 %}
 {{ logoList(logoCompanies) }}
