add Redis logo to Rust training landing page

--- a/src/services/workshops/rust.njk
+++ b/src/services/workshops/rust.njk
@@ -108,6 +108,7 @@ image: "/assets/images/workshops/rust-og-image.jpg"
   'BMW Car IT',
   'Faculty',
   'Lego',
+  'Redis',
   'Canonical',
   'Ystorian',
   'Change Healthcare',
