add Thales logo to Rust training clients

--- a/src/services/workshops/rust.njk
+++ b/src/services/workshops/rust.njk
@@ -110,6 +110,7 @@ image: "/assets/images/workshops/rust-og-image.jpg"
   'Lego',
   'Redis',
   'Canonical',
+  'Thales',
   'Ystorian',
   'Change Healthcare',
   'Süddeutsche Zeitung',
