add Keyrock to Rust training clients logos

--- a/src/services/workshops/rust.njk
+++ b/src/services/workshops/rust.njk
@@ -113,6 +113,7 @@ image: "/assets/images/workshops/rust-og-image.jpg"
   'Thales',
   'Ystorian',
   'Change Healthcare',
+  'Keyrock',
   'Süddeutsche Zeitung',
   'Truelayer'
   ]
