add CERN to Rust training participants logos

--- a/src/services/workshops/rust.njk
+++ b/src/services/workshops/rust.njk
@@ -107,6 +107,7 @@ image: "/assets/images/workshops/rust-og-image.jpg"
   set logoCompanies = [
   'BMW Car IT',
   'Faculty',
+  'CERN',
   'Lego',
   'Redis',
   'Canonical',
