add NTT Data logo to Rust training participants companies

--- a/src/services/workshops/rust.njk
+++ b/src/services/workshops/rust.njk
@@ -105,8 +105,8 @@ image: "/assets/images/workshops/rust-og-image.jpg"
 
 {%
   set logoCompanies = [
+  'Keyrock',
   'BMW Car IT',
-  'Faculty',
   'CERN',
   'Lego',
   'Redis',
@@ -114,7 +114,8 @@ image: "/assets/images/workshops/rust-og-image.jpg"
   'Thales',
   'Ystorian',
   'Change Healthcare',
-  'Keyrock',
+  'NTT Data',
+  'Faculty',
   'Süddeutsche Zeitung',
   'Truelayer'
   ]
