--- a/src/work.njk
+++ b/src/work.njk
@@ -27,9 +27,9 @@ og:
 <div class="work container container--xl">
   <h2 class="work__title h5">Meet our clients</h2>
   <ul class="work__list">
-    {{ featuredCaseStudy('aleph-alpha', 'purple', 'work__featured-case-study') }}
+    {{ featuredCaseStudy('redis', 'black', 'work__featured-case-study') }}
     {{ clientCards(['redis', 'qonto']) }}
-    {{ featuredCaseStudy('rail-europe', 'black', 'work__featured-case-study') }}
+    {{ featuredCaseStudy('rail-europe', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['auditboard', 'xbav']) }}
     {{ featuredCaseStudy('qonto', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['bmw-car-it', 'trainline']) }}
@@ -39,7 +39,7 @@ og:
     {{ clientCards(['mobimed', 'poellath']) }}
     {{ featuredCaseStudy('experteer', 'black', 'work__featured-case-study') }}
     {{ clientCards(['terminal49', 'loconet']) }}
-    {{ featuredCaseStudy('ais', 'purple', 'work__featured-case-study') }}
+    {{ featuredCaseStudy('aleph-alpha', 'black', 'work__featured-case-study') }}
     {{ clientCards(['hop-skip-drive', 'expedition']) }}
     {{ featuredCaseStudy('mobimed', 'black', 'work__featured-case-study') }}
     {{ clientCards(['neighbourhoodie', 'robin-hood']) }}
@@ -55,6 +55,7 @@ og:
     {{ clientCards(['phorest', 'aleph-alpha']) }}
     {{ featuredCaseStudy('whirlwind', 'black', 'work__featured-case-study') }}
     {{ clientCards(['ringler', 'dim3']) }}
+    {{ featuredCaseStudy('ais', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['kisters', 'rail-europe']) }}
     {{ clientCards(['sage', 'mvb']) }}
     {{ clientCards(['camilyo', 'cardstack']) }}
