add new mini cases to work page

--- a/src/work.njk
+++ b/src/work.njk
@@ -34,9 +34,9 @@ og:
     {{ featuredCaseStudy('qonto', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['bmw-car-it', 'aleph-alpha']) }}
     {{ featuredCaseStudy('kisters', 'black', 'work__featured-case-study') }}
-    {{ clientCards(['ais', 'timify']) }}
+    {{ clientCards(['otto', 'ucsf']) }}
     {{ featuredCaseStudy('trainline', 'purple', 'work__featured-case-study') }}
-    {{ clientCards(['mobimed', 'poellath']) }}
+    {{ clientCards(['bluecode', 'poellath']) }}
     {{ featuredCaseStudy('experteer', 'black', 'work__featured-case-study') }}
     {{ clientCards(['terminal49', 'loconet']) }}
     {{ featuredCaseStudy('aleph-alpha', 'black', 'work__featured-case-study') }}
@@ -54,6 +54,8 @@ og:
     {{ featuredCaseStudy('timify', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['phorest', 'clark']) }}
     {{ featuredCaseStudy('whirlwind', 'black', 'work__featured-case-study') }}
+    {{ clientCards(['feedback-fruits', 'cos']) }}
+    {{ clientCards(['suitepad', 'unpkg']) }}
     {{ clientCards(['ringler', 'dim3']) }}
     {{ featuredCaseStudy('ais', 'purple', 'work__featured-case-study') }}
     {{ clientCards(['kisters', 'rail-europe']) }}
