add unpkg logo to Rust landing page

--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -159,7 +159,8 @@ og:
     'BMW Car IT',
     'Faculty',
     'Otto',
-    'Redis'
+    'Redis',
+    'unpkg'
     ]
   %}
   {{ logoList(logoCompanies) }}
