use Suitepad case on travel landing page

--- a/src/travel.njk
+++ b/src/travel.njk
@@ -234,7 +234,7 @@ og:
   {{ quote(content) }}
 </div>
 
-{% set clients = ['trainline', 'hop-skip-drive', 'terminal49', 'aleph-alpha'] %}
+{% set clients = ['trainline', 'hop-skip-drive', 'suitepad', 'aleph-alpha'] %}
 {{ featuredCaseStudies(clients) }}
 
 {{ recentPosts("Latest from our blog", collections.travelPosts) }}
