add more client logos to main landing page

--- a/src/index.njk
+++ b/src/index.njk
@@ -39,6 +39,9 @@ eleventyImport:
   'Redis',
   'Aleph Alpha',
   'Auditboard',
+  'Otto',
+  'UCSF',
+  'Bluecode',
   'Experteer',
   'Rail Europe'
   ]
