replace text on Rust subscription cta

--- a/src/components/global/rust-subscription-cta.njk
+++ b/src/components/global/rust-subscription-cta.njk
@@ -7,7 +7,7 @@ A call-to-action meant to be displayed at the beginning of a blog post.
   "title": "Rust Support Subscription",
   "text": "Open up a direct line to Mainmatter's Rust experts, led by Luca Palmieri.",
   "linkUrl": "/rust-subscription/",
-  "linkText": "More info & sign up"
+  "linkText": "Learn more"
   }
 %}
 {{ ctaBanner('purple', 'default', content) }}
