improve intro text on Rust landing page

--- a/src/rust-consulting.njk
+++ b/src/rust-consulting.njk
@@ -36,10 +36,12 @@ og:
       <h5 class="mb-015">Rust & Mainmatter</h5>
       <h3 class="mb-2">A unique skillset</h3>
       <p>
-        We’re experts - our Rust team is led by Luca Palmieri, author of
-        <a href="http://zero2prod.com">"Zero to Production in Rust"</a>, and we have been part of
-        the Rust ecosystem for years, helping out the
-        <a href="https://crates.io">crates.io</a> project.
+        We’re Rust experts — our team is led by Luca Palmieri, author of
+        <a href="http://zero2prod.com">"Zero to Production in Rust"</a>. We’ve been active in the
+        Rust ecosystem for years, creating the
+        <a href="https://rust-exercises.com">100 Exercises to Learn Rust</a> course, contributing to
+        <a href="https://crates.io">crates.io</a>, and maintaining several other
+        <a href="#open-source">open-source projects</a>.
       </p>
       <p>
         We support you in rewriting existing codebases to Rust, using Rust to accelerate hot modules
@@ -208,7 +210,6 @@ og:
 %}
 {% set title = 'Our EuroRust partners are betting on Rust' %}
 {{ logoList(logoCompanies, title, "h4", "h5") }}
-
 {% include "global/rust-subscription-cta.njk" %}
 
 <section class="my-10 container container--lg">
@@ -300,7 +301,7 @@ og:
   </div>
 </section>
 
-<section class="container container--xl opensource-list">
+<section class="container container--xl opensource-list" id="open-source">
   <div class="">
     <h2 class="opensource-list__title h2">We love Open Source</h2>
     <ul class="opensource-list__list">
