submit LI ID in Rust adoption handbook download form

--- a/src/rust-adoption-handbook.njk
+++ b/src/rust-adoption-handbook.njk
@@ -79,6 +79,7 @@ og:
           data-goal="Rust+Adoption+Handbook"
         >
           <fieldset data-form-content tabindex="-1" disabled>
+            <input type="hidden" name="li_fat_id" />
             <div data-form-content class="contact-form__field cta__input mb-2 mt-2">
               <input
                 class="contact-form__input"
@@ -163,6 +164,13 @@ og:
             </div>
           </div>
         </form>
+        <script>
+          document.addEventListener("DOMContentLoaded", () => {
+            const urlParams = new URLSearchParams(window.location.search);
+            const liFatId = urlParams.get("li_fat_id");
+            document.querySelector("[name=li_fat_id]").value = liFatId;
+          });
+        </script>
         <div class="form-with-image__image">
           <div class="image-wrapper">
             {% image '/assets/images/photos/rust-adoption-handbook-cover.jpg', "Title page of Mainmatter's Rust Adoption Handbook", '(min-width: 48em) 40rem, 90vw', 'lazy', '', [400, 800, 1200] %}
