POST all forms via hooks.mainmatter.com

--- a/src/components/contact-form.njk
+++ b/src/components/contact-form.njk
@@ -14,8 +14,8 @@
         id="contact-form"
         data-contact-form
         data-status="initial"
-        data-action="https://hooks.mainmatter.dev/hooks/catch/4837956/urrlzne/"
-        data-method="GET"
+        data-action="https://hooks.mainmatter.com/hooks/catch/4837956/ur7n2ox/"
+        data-method="POST"
         data-goal="Contact"
       >
         <fieldset data-form-content tabindex="-1" disabled>
