--- a/src/components/layouts/workshop.njk
+++ b/src/components/layouts/workshop.njk
@@ -120,8 +120,8 @@ layout: "base"
           data-contact-form
           class="contact-form__form"
           data-status="initial"
-          data-action="https://hooks.mainmatter.dev/hooks/catch/4837956/urrlcax/"
-          data-method="GET"
+          data-action="https://hooks.mainmatter.com/hooks/catch/4837956/ur7jr6p/"
+          data-method="POST"
           data-goal="Workshop+Contact"
         >
           <fieldset data-form-content tabindex="-1" disabled>
