--- a/src/components/subscription-signup-form.njk
+++ b/src/components/subscription-signup-form.njk
@@ -14,8 +14,8 @@
           data-contact-form
           class="contact-form__form"
           data-status="initial"
-          data-action="https://hooks.mainmatter.dev/hooks/catch/4837956/urrlllk/"
-          data-method="GET"
+          data-action="https://hooks.mainmatter.com/hooks/catch/4837956/ur77xkg/"
+          data-method="POST"
           data-goal="Subscription+Contact+{{ content.kind | capitalize }}"
         >
           <fieldset data-form-content tabindex="-1" disabled>
