--- a/src/rust-adoption-handbook.njk
+++ b/src/rust-adoption-handbook.njk
@@ -74,8 +74,8 @@ og:
           data-contact-form
           class="contact-form__form form-with-image__form"
           data-status="initial"
-          data-action="https://hooks.mainmatter.dev/hooks/catch/4837956/urrlnet/"
-          data-method="GET"
+          data-action="https://hooks.mainmatter.com/hooks/catch/4837956/ur77tcy/"
+          data-method="POST"
           data-goal="Rust+Adoption+Handbook"
         >
           <fieldset data-form-content tabindex="-1" disabled>
