--- a/src/travel.njk
+++ b/src/travel.njk
@@ -69,8 +69,8 @@ og:
           data-contact-form
           class="contact-form__form form-with-image__form"
           data-status="initial"
-          data-action="https://hooks.mainmatter.dev/hooks/catch/4837956/urrl07f/"
-          data-method="GET"
+          data-action="https://hooks.mainmatter.com/hooks/catch/4837956/ur7v3cp/"
+          data-method="POST"
           data-goal="Travel+Whitepaper"
         >
           <fieldset data-form-content tabindex="-1" disabled>
@@ -254,8 +254,8 @@ og:
         data-contact-form
         class="contact-form__form"
         data-status="initial"
-        data-action="https://hooks.mainmatter.dev/hooks/catch/4837956/urrlzne/"
-        data-method="GET"
+        data-action="https://hooks.mainmatter.com/hooks/catch/4837956/ur7n2ox/"
+        data-method="POST"
         data-goal="Travel+Contact"
       >
         <fieldset data-form-content tabindex="-1" disabled>
